--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
@@ -31,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard/issues"
   },
-  "homepage": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard#readme"
+  "homepage": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard#readme",
+  "devDependencies": {
+    "dotenv": "^6.0.0"
+  }
 }
