--- a/leaderboard-frontend/package.json
+++ b/leaderboard-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "jsonwebtoken": "^8.3.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-navigation": "^2.0.4",
@@ -26,6 +27,7 @@
     "webpack-clear-console": "^1.0.3"
   },
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "prettier": "1.14.2"
   },
   "proxy": "http://localhost:4000"
