--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.2",
     "validator": "^10.5.0"
   },
   "bugs": {
