--- a/leaderboard-frontend/package.json
+++ b/leaderboard-frontend/package.json
@@ -24,6 +24,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.2",
     "webpack-clear-console": "^1.0.3"
   },
   "devDependencies": {
