--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "fast-csv": "^2.4.1",
     "helmet": "^3.13.0",
+    "json2csv": "^4.2.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.7",
