--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./backend/server.js",
-    "heroku-postbuild": "cd leaderboard-frontend && npm install && npm run build"
+    "heroku-postbuild": "npm i"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
@@ -34,6 +39,5 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard#readme",
   "devDependencies": {
-    "dotenv": "^6.0.0"
   }
 }
