--- a/package.json
+++ b/package.json
@@ -41,6 +41,5 @@
     "url": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard/issues"
   },
   "homepage": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard#readme",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
