--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -35,6 +36,7 @@
     "passport-jwt": "^4.0.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
+    "stripe": "^6.7.0",
     "validator": "^10.5.0"
   },
   "bugs": {
