--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./backend/server.js",
-    "heroku-postbuild": "npm i"
+    "heroku-postbuild": "cd leaderboard-frontend && npm install && npm run build"
   },
   "repository": {
     "type": "git",
