--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "sanitize": "^2.1.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
     "stripe": "^6.7.0",
