--- a/package.json
+++ b/package.json
@@ -44,5 +44,7 @@
     "url": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard/issues"
   },
   "homepage": "https://github.com/Lambda-School-Labs/CS9-LambdaNextLeaderboard#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.18.4"
+  }
 }
